# pintex

./: .gitignore  README.md  pintex.cabal  pintex.hs
transitions/: still.json  text-still.json
